# routes/api.php
@@ -1,5 +1,7 @@
 <?php
 
+use App\Http\Controllers\Api\CardController;
+use App\Http\Controllers\Api\CardTypeController;
 use App\Http\Controllers\Api\UserController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
@@ -12,19 +14,18 @@ Route::post('/login', [AuthController::class, 'login'])->name('login');
 Route::post('/verify-otp', [AuthController::class, 'verifyOtp']);
 
 Route::middleware('auth:api')->group(function () {
+
+    // Auth management
     Route::get('/me', [AuthController::class, 'me']);
     Route::post('/logout', [AuthController::class, 'logout']);
     Route::post('/refresh', [AuthController::class, 'refresh']);
+
+    // Users
+    Route::apiResource('users', UserController::class);
+
+    // Cards
+    Route::apiResource('cards', CardController::class);
+
+    // Card Types
+    Route::apiResource('card-types', CardTypeController::class);
 });
-
-Route::apiResource('users', UserController::class)->middleware('auth:api');
-
-Route::middleware('auth:api')->prefix('users')->group(function () {
-    Route::get('/', [UserController::class, 'index']);
-    Route::post('/', [UserController::class, 'store']);
-    Route::get('{id}', [UserController::class, 'show']);
-    Route::put('{id}', [UserController::class, 'update']);
-    Route::delete('{id}', [UserController::class, 'destroy']);
-});
-
-
